Fixed Lint warnings